# tauth-pro

./: .gitignore
tauth-pro/: .coveragerc  LICENSE  MANIFEST.in  README.rst  manage.py  requirements.txt  setup.cfg  tox.ini
tauth-pro/tauth/: apps.py  forms.py  serializers.py  urls.py  views.py
tauth-pro/tauth-pro/: asgi.py  settings.py  urls.py  wsgi.py
tauth-pro/tauth/authenticators/: keycloak_authenticator.py
tauth-pro/tauth/core/: abc_authenticator.py  base_authentication.py  base_backend.py
tauth-pro/tauth/tests/: requirements.pip  test_forms.py  test_views.py
