[metadata]
name = tauth
version = 0.1
description = Third-party Authentication Django Backend.
long_description = file: README.rst
url = https://www.linkedin.com/in/mohammed-iben-ayad/
author = Iben Ayad Mohammed
author_email = mohammed.ibenayad@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Authentication API

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.2
    django-environ >= 0.8.1
    djangorestframework >= 3
    python-keycloak >= 0.26.1